riscv/nginx/ingressroute-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-tls
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nginx-riscv.allarddcs.nl`)
    kind: Rule
    services:
    - name: nginx
      port: 80
  tls:
    certResolver: letsencrypt
